# dummy-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
dummy/: Cargo.toml
dummy/examples/: dummy_macro.rs
dummy/src/: base_types.rs  dummy.rs  lib.rs
dummy/src/dummy_impl/: base_types.rs  mod.rs  std_collections.rs
dummy/tests/: dummy_integration_test.rs
dummy_derive/: Cargo.toml
dummy_derive/src/: code_builder.rs  lib.rs  type_wrapper.rs
dummy_derive/tests/: dummy_derive_integration_test.rs
dummy_example/: Cargo.toml
dummy_example/src/: main.rs
dummy_macro/: Cargo.toml
dummy_macro/examples/: dummy_macro.rs
dummy_macro/src/: base_types.rs
dummy_macro_derive/: Cargo.toml
dummy_macro_derive/src/: lib.rs
