[package]
name = "dummy"
version = "0.1.0"
edition = "2021"
authors = ["jroddev <jroddev@gmail.com>"]
repository = "https://github.com/jroddev/dummy-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
dummy_derive = { optional = true, path = "../dummy_derive" }


[features]
derive = ["dummy_derive"]

[dev-dependencies]
itertools = "0.10.3"
