[package]
name = "dummy-rs-derive"
version = "0.1.0"
edition = "2021"
authors = ["jroddev <jroddev@gmail.com>"]
repository = "https://github.com/jroddev/dummy-rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.43"
quote = "1.0.20"
syn = { version = "1.0.98", features = ["extra-traits"] }

[dev-dependencies]
dummy-rs = { path = "../dummy" }
rand = "0.8.5"

