[lib]
proc-macro = true

[package]
name = "dummy_macro_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.43"
quote = "1.0.20"
syn = { verion = "1.0.98", features = ["extra-traits"] }
